syntax = "proto3";

package go.micro.srv.phone;

service Phone {
    rpc GetCode(GetRequest) returns (GetResponse) {}
    rpc CheckCode(CheckRequest) returns (CheckResponse) {}
}

message GetRequest {
    string phone = 1;
}

message GetResponse {
}

message CheckRequest {
    string phone = 1;
    int64 code = 2;
}

message CheckResponse {
}
